# hwmondump

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  flake.nix
include/: analysis_util.hpp  hwmondump_util.hpp  libsensors_output_list.hpp  metadata.hpp
man/: CMakeLists.txt  hwmondump.1
test/: CMakeLists.txt  analysis_test.cpp  config.h.in  e2e_null_test.sh  e2e_sensor_test.sh  hwmondump_test.cpp
test/full_run/: metadata.toml
test/test_dir/: dontignore_timestamp_value.csv  metadata.toml
test/test_dir_malformed_metadata/: metadata.toml
